--- a/index.html
+++ b/index.html
@@ -3,62 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Handi Store Menu</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Fika Store - Top Up Murah</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        .container {
+            max-width: 600px;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        }
+        .header-img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .btn-whatsapp {
+            background-color: #25d366;
+            color: white;
+        }
+        .btn-whatsapp:hover {
+            background-color: #1ebc57;
+        }
+    </style>
 </head>
 <body>
+    <div class="container mt-5 text-center">
+        <img src="https://source.unsplash.com/600x200/?gaming,shop" class="header-img" alt="Banner">
+        <h2 class="mt-3">💎 Fika Store - Top Up Murah 💎</h2>
+        <p>Top-Up Free Fire, MLBB, PUBG, dan lainnya dengan harga murah!</p>
 
-    <header>
-        <h1>Handi Store</h1>
-        <p>Hosting & Jasa Digital Murah dan Terpercaya</p>
-    </header>
+        <div class="mt-4">
+            <label class="form-label">Pilih Game</label>
+            <select id="game" class="form-select">
+                <option value="Free Fire">Free Fire</option>
+                <option value="Mobile Legends">Mobile Legends</option>
+                <option value="PUBG Mobile">PUBG Mobile</option>
+                <option value="Valorant">Valorant</option>
+            </select>
+        </div>
+
+        <div class="mt-3">
+            <label class="form-label">Masukkan ID Game</label>
+            <input type="text" id="playerID" class="form-control" placeholder="Contoh: 123456789">
+        </div>
+
+        <div class="mt-3">
+            <label class="form-label">Pilih Diamond</label>
+            <select id="diamond" class="form-select" onchange="hitungHarga()">
+                <option value="1000">5 DM - Rp 1.000</option>
+                <option value="2100">12 DM - Rp 2.100</option>
+                <option value="7100">50 DM - Rp 7.100</option>
+                <option value="14000">100 DM - Rp 14.000</option>
+                <option value="30000">210 DM - Rp 30.000</option>
+            </select>
+        </div>
+
+        <h4 class="mt-3">Total Harga: <span id="totalHarga">Rp 1.000</span></h4>
+
+        <a id="orderBtn" href="#" class="btn btn-whatsapp mt-3 w-100">
+            <i class="fab fa-whatsapp"></i> Order via WhatsApp
+        </a>
+    </div>
 
     <section class="intro">
         <img src="logo.png" alt="Fika AI Logo">
         <p><strong><i class="fas fa-robot"></i>       Hai, aku adalah Handi.</strong> Aku adalah Dev/pengembang AI/bot buatan yang siap membantu Anda kapan saja! Saat ini Saya sedang membangun website ini untuk <bold>Keperluan Store</bold>, dan Fika juga berkontribusi dalam prosesnya. Semoga website ini dapat membantu Anda mendapatkan layanan terbaik!</p>
     </section>
-    
-    <div class="menu-container">
-        <div class="menu-item">
-            <img src="logo.png" alt="Dashboard">
-            <h3>Dashboard</h3>
-        </div>
-        <div class="menu-item">
-            <img src="logo.png" alt="Hosting">
-            <h3>Hosting</h3>
-        </div>
-        <div class="menu-item">
-            <img src="logo.png" alt="Jasa Digital">
-            <h3>Jasa Digital</h3>
-        </div>
-        <div class="menu-item">
-            <img src="logo.png" alt="Pengaturan">
-            <h3>Pengaturan</h3>
-        </div>
-        <div class="menu-item">
-            <img src="logo.png" alt="Bantuan">
-            <h3>Bantuan</h3>
-        </div>
-        <div class="menu-item">
-            <img src="logo.png" alt="Keluar">
-            <h3>Keluar</h3>
-        </div>
-    </div>
-
-    body {
-    font-family: Arial, sans-serif; 
-            text-align: center; 
-            background-color: #121212; 
-            color: white;
-        }
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
- {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
+<style>
 body {
     background: linear-gradient(135deg, #1e1e2f, #2a2a3d);
     color: #fff;
@@ -67,6 +82,9 @@ body {
     align-items: center;
     height: 100vh;
     padding: 20px;
+}
+
+
 }
 
 .menu-container {
@@ -101,7 +119,20 @@ body {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
     background: rgba(255, 255, 255, 0.2);
 }
+    </style>
+    <script>
+        function hitungHarga() {
+            let harga = document.getElementById("diamond").value;
+            document.getElementById("totalHarga").innerText = "Rp " + harga;
 
-    <script src="script.js"></script>
+            let game = document.getElementById("game").value;
+            let playerID = document.getElementById("playerID").value;
+            let diamond = document.getElementById("diamond").options[document.getElementById("diamond").selectedIndex].text;
+
+            let waMessage = `https://wa.me/6287717274346?text=Halo, saya ingin top-up ${game}%0AID: ${playerID}%0AItem: ${diamond}%0ATotal: Rp ${harga}`;
+            document.getElementById("orderBtn").href = waMessage;
+        }
+    </script>
+
 </body>
 </html>
