--- a/index.html
+++ b/index.html
@@ -85,7 +85,33 @@ body {
     padding: 20px;
 }
 
+.container {
+    max-width: 600px;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
 
+.header-img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.btn-whatsapp {
+    background-color: #25d366;
+    color: white;
+    font-weight: bold;
+}
+
+.btn-whatsapp:hover {
+    background-color: #1ebc57;
+}
+
+h2 {
+    color: #333;
+    font-weight: bold;
 }
 
 .menu-container {
