--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div class="mt-3">
             <label class="form-label">Pilih Diamond</label>
             <select id="diamond" class="form-select" onchange="hitungHarga()">
-                <option value="1000">5 DM - Rp 1.000</option>
-                <option value="2100">12 DM - Rp 2.100</option>
-                <option value="7100">50 DM - Rp 7.100</option>
-                <option value="14000">100 DM - Rp 14.000</option>
-                <option value="30000">210 DM - Rp 30.000</option>
+                <option value="1000">5 DM - Rp ?</option>
+                <option value="2100">12 DM - Rp ?</option>
+                <option value="7100">50 DM - Rp ?</option>
+                <option value="14000">100 DM - Rp ?</option>
+                <option value="30000">210 DM - Rp ?</option>
             </select>
         </div>
 
@@ -62,6 +62,47 @@ body {
     height: 100vh;
     padding: 20px;
 }
+.logo {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+}
+
+ .card {
+            background: #1e1e1e;
+            border-radius: 10px;
+            padding: 30px;
+            margin: 35px 0; 
+            border: 2px solid #008080; 
+            box-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
+ }
+
+    header {
+    background: linear-gradient(45deg, #ff416c, #ff4b2b);
+    padding: 20px;
+    font-size: 20px
+}
+
+img, logo, icon {
+    width: 100px; 
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover; 
+    border: 3px solid white; 
+}
+
+.intro img {
+    width: 100px;
+    margin-top: 10px;
+}
+
+.intro {
+    background: #2a2a2a;
+    padding: 20px;
+    border-radius: 8px;
+    margin: 20px auto;
+    max-width: 80%;
 
 .container {
     max-width: 600px;
