--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container mt-5 text-center">
-        <img src="https://source.unsplash.com/600x200/?gaming,shop" class="header-img" alt="Banner">
+        <img src="logo" class="header-img" alt="Banner">
         <h2 class="mt-3">💎 Fika Store - Top Up Murah 💎</h2>
         <p>Top-Up Free Fire, MLBB, PUBG, dan lainnya dengan harga murah!</p>
 
