--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <a id="orderBtn" href="#" class="btn btn-whatsapp mt-3 w-100">
             <i class="fab fa-whatsapp"></i> Order via WhatsApp
         </a>
+        <a href="https://wa.me/6287717274346?text=Halo,%20saya%20ingin%20top-up%20210%20DM%20untuk%20ID%201986193222" target="_blank">
+    Order via WhatsApp
+        </a>
     </div>
 
     <section class="intro">
