--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
     <section class="container">
         <img src="logo.png" alt="Fika AI Logo">
-        <p><strong><i class="fas fa-robot"></i>       Hai, aku adalah Handi.</strong> Aku adalah Dev/pengembang AI/bot buatan yang siap membantu Anda kapan saja! Saat ini Saya sedang membangun website ini untuk <bold>Keperluan Store</bold>, dan Fika juga berkontribusi dalam prosesnya. Semoga website ini dapat membantu Anda mendapatkan layanan terbaik!</p>
+        <p><strong><i class="fas fa-robot"></i>      
+            
+            Hai, aku adalah Handi.</strong> Aku adalah Dev/pengembang AI/bot buatan yang siap membantu Anda kapan saja! Saat ini Saya sedang membangun website ini untuk <bold>Keperluan Store</bold>, dan Fika juga berkontribusi dalam prosesnya. Semoga website ini dapat membantu Anda mendapatkan layanan terbaik!</p>
     </section>
 <style>
 body {
