--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 
         <h4 class="mt-3">Total Harga: <span id="totalHarga">Rp 1.000</span></h4>
 
-        <a id="orderBtn" href="#" class="btn btn-whatsapp mt-3 w-100">
-            <i class="fab fa-whatsapp"></i> Order via WhatsApp
-        </a>
+        <div class="mt-4">
+            <label class="form-label">Contact Us</label>
+            <select id="game" class="form-select">
+                <option value="Free Fire">Handi</option>
+                <option value="Mobile Legends">Bot FikaAi</option>
         <a href="https://wa.me/6287717274346?text=Halo,%20saya%20ingin%20top-up%20210%20DM%20untuk%20ID%201986193222" target="_blank">
     Order via WhatsApp
         </a>
