--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
 
         <div class="mt-4">
             <label class="form-label">Contact Us</label>
-            <select id="game" class="form-select">
-                <option value="Free Fire">Handi</option>
-                <option value="Mobile Legends">Bot FikaAi</option>
                 <button onclick="orderWA()">Order via WhatsApp</button>
+            <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20top-up" target="_blank">
+    <button style="background-color: #25D366; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
+        Order via WhatsApp
+    </button>
+            </a>
         <a href="https://wa.me/6287717274346?text=Halo,%20saya%20ingin%20top-up%20210%20DM%20untuk%20ID%201986193222" target="_blank">
     Order via WhatsApp
         </a>
