--- a/index.html
+++ b/index.html
@@ -45,15 +45,11 @@
 
         <div class="mt-4">
             <label class="form-label">Contact Us</label>
-                <button onclick="orderWA()">Order via WhatsApp</button>
-            <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20top-up" target="_blank">
+            
+            <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20top-up" target="_blank"></a>
     <button style="background-color: #25D366; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
         Order via WhatsApp
     </button>
-            </a>
-        <a href="https://wa.me/6287717274346?text=Halo,%20saya%20ingin%20top-up%20210%20DM%20untuk%20ID%201986193222" target="_blank">
-    Order via WhatsApp
-        </a>
     </div>
 
     <section class="container">
