--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h4 class="mt-3">Total Harga: <span id="totalHarga">Rp 1.000</span></h4>
 
         <div class="mt-4">
-            <label class="form-label">Contact Us</label>
+            <th>Contact Us</th>
             
             <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20top-up" target="_blank"></a>
     <button style="background-color: #25D366; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
