--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="mt-4">
             <th>Contact Us</th>
             
-            <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20top-up" target="_blank"></a>
+            <a href="https://wa.me/6287717274346text=Halo,%20saya%20ingin%20top-up" target="_blank"></a>
     <button style="background-color: #25D366; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
         Order via WhatsApp
     </button>
