--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
         <div class="mt-3">
             <label class="form-label">Pilih Diamond</label>
             <select id="diamond" class="form-select" onchange="hitungHarga()">
-                <option value="1000">5 DM - Rp ?</option>
-                <option value="2100">12 DM - Rp ?</option>
-                <option value="7100">50 DM - Rp ?</option>
-                <option value="14000">100 DM - Rp ?</option>
-                <option value="30000">210 DM - Rp ?</option>
+                <option value="1000">5 DM - Rp 1.000</option>
+                <option value="2100">12 DM - Rp 3.000</option>
+                <option value="7100">50 DM - Rp 8.000</option>
+                <option value="14000">100 DM - Rp 13.000</option>
+                <option value="30000">210 DM - Rp 25.000</option>
             </select>
         </div>
 
         <h4 class="mt-3">Total Harga: <span id="totalHarga">Rp 1.000</span></h4>
 
-        <div class="mt-4">
+        <div class="card">
             <th>Contact Us</th>
             
             <a href="https://wa.me/6287717274346text=Halo,%20saya%20ingin%20top-up" target="_blank"></a>
