--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
         <h4 class="mt-3">Total Harga: <span id="totalHarga">Rp 1.000</span></h4>
 
-        <div class="card">
+        <div class="mt-3">
             <th>Contact Us</th>
             
             <a href="https://wa.me/6287717274346text=Halo,%20saya%20ingin%20top-up" target="_blank"></a>
-    <button style="background-color: #25D366; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
+    <button style="background-color: #25D366; color: white; padding: 15px 25px; border: none; border-radius: 5px; cursor: pointer;">
         Order via WhatsApp
     </button>
     </div>
