--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
 </head>
 <body>
-    <section class="container">
+    <section class="container mt-5 text-center">
         <img src="logo.png" alt="Fika AI Logo">
         <p><strong><i class="fas fa-robot"></i>      
             
