--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
 
         <div class="mt-3">
             <th>Contact Us</th>
-            
+
+           <button onclick="orderWA()">Order via WhatsApp></button>
             <a href="https://wa.me/6287717274346text=Halo,%20saya%20ingin%20top-up" target="_blank"></a>
-    <button style="background-color: #25D366; color: white; padding: 15px 25px; border: none; border-radius: 5px; cursor: pointer;">
-        Order via WhatsApp
-    </button>
     </div>
 
 <style>
