--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
         <div class="mt-3">
             <th>Contact Us</th>
-
-           <button onclick="orderWA()">Order via WhatsApp></button>
-            <a href="https://wa.me/6287717274346text=Halo,%20saya%20ingin%20top-up" target="_blank"></a>
-    </div>
+          <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20top-up%20Free%20Fire%0AID%20Game:%201986193222%0APilihan%20Diamond:%20210%20DM%20-%20Rp%2030.000" target="_blank">
+    Order via WhatsApp
+          </a>
+            </div>
 
 <style>
 body {
