--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <img src="logo.png" alt="logo fika ai">
         <h2 class="mt-3">💎 Fika Store - Top Up Murah 💎</h2>
         <p>Top-Up Free Fire, MLBB, PUBG, dan lainnya dengan harga murah!</p>
+        <p>Gaperlu keluar rumah! cukup di Fila x Handi Store kamu udah bisa membeli diamond lewat website</p>
+        <p>Aman, Berkualitas, Amanah, anti php!</p>
 
         <div class="mt-4">
             <label class="form-label">Pilih Game</label>
@@ -41,7 +43,7 @@
             </select>
         </div>
 
-        <h4 class="mt-3">Total Harga: <span id="totalHarga">Rp 1.000</span></h4>
+        <h4 class="mt-3">Beli diamond gaperlu keluar rumah, cukup di Fika x Handi Store!</span></h4>
 
         <div class="mt-3">
             <th>Contact Us</th>
