--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ h2 {
     background: rgba(255, 255, 255, 0.2);
 }
     </style>
-    <<script>
+    <script>
 function orderWA() {
     let nomorWA = "6287717274346"; // Ganti dengan nomor WhatsApp kamu
     let idGame = document.getElementById("idGame").value;
