--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="mt-3">
             <th>Contact Us</th>
-          <a href="https://wa.me/6287717274346?text=Halo%20%handi,%20%saya%20%ingin%20%menggunakan%20%jasa%20kamu" target="_blank">
+          <a href="${waMessage}`;" target="_blank">
     Order via WhatsApp
           </a>
             </div>
