--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="mt-3">
             <th>Contact Us</th>
-          <a href="Halo, saya ingin top-up ${game}%0AID: ${playerID}%0AItem: ${diamondText}%0ATotal: Rp ${harga}`;`;" target="_blank">
+          <a href="https://wa.me/6287717274346?text=Halo, saya ingin top-up ${game}%0AID: ${playerID}%0AItem: ${diamondText}%0ATotal: Rp ${harga}`;`;" target="_blank">
     Order via WhatsApp
           </a>
             </div>
